feat(backend): llm -> 意图 -> mcp -> 返回流程精简分离